--- a/Invoicing/Dockerfile
+++ b/Invoicing/Dockerfile
@@ -20,6 +20,17 @@ RUN pip install --upgrade pip \
     && pip install -r requirements.txt \
     && cd Invoicing
 
+# Install PostgreSQL client library and other dependencies
+RUN apt-get install -y libpq-dev
+RUN pip install psycopg2-binary
+
+# Set environment variables for PostgreSQL connection
+ENV POSTGRES_DB=invoice
+ENV POSTGRES_USER=invoice_user
+ENV POSTGRES_PASSWORD=invoice_password
+ENV POSTGRES_HOST=localhost
+ENV POSTGRES_PORT=5432
+
 # Migrate the database
 RUN python manage.py makemigrations
 RUN python manage.py migrate
