--- a/Invoicing/Dockerfile
+++ b/Invoicing/Dockerfile
@@ -41,7 +41,6 @@
 
 
 #---------------------------------------------------------------------
-# Use an official Python runtime as a parent image
 FROM python:3.9-slim
 
 # Set the working directory in the container
@@ -54,8 +53,9 @@ COPY . /app
 RUN apt-get update \
     && apt-get install -y python3-venv \
     && apt-get install -y postgresql-client \
-    && apt-get install python-psycopg2 -y \
-    && rm -rf /var/lib/apt/list/*
+    && apt-get install -y libpq-dev \
+    && apt-install -y python-psycopg2 \
+    && apt-get clean
 
 # Create a virtual environment
 RUN python -m venv /opt/venv
@@ -63,32 +63,23 @@ RUN python -m venv /opt/venv
 # Activate the virtual environment and install dependencies
 ENV PATH="/opt/venv/bin:$PATH"
 RUN pip install --upgrade pip \
-    && pip install -r requirements.txt
-
-# Install PostgreSQL client library and other dependencies
-RUN apt-get install -y libpq-dev
-RUN pip install psycopg2-binary
-RUN apt-get update -y
+    && pip install -r requirements.txt \
+    && pip install psycopg2-binary
 
 # Set environment variables for PostgreSQL connection
-ENV POSTGRES_DB=invoice_db
-ENV POSTGRES_USER=invoice_user
-ENV POSTGRES_PASSWORD=password12345
+ENV POSTGRES_DB=your_database_name
+ENV POSTGRES_USER=your_database_user
+ENV POSTGRES_PASSWORD=your_database_password
 ENV POSTGRES_HOST=postgres-db
 ENV POSTGRES_PORT=5432
 
-# # Migrate the database
-# RUN python manage.py makemigrations && RUN python manage.py migrate
+# Migrate the database
+RUN python manage.py makemigrations && python manage.py migrate
 
-# Migrate the database invoice1
-# RUN python manage.py makemigrations invoice1 && RUN python manage.py migrate invoice1
+# Uncomment to create superuser non-interactively
+#RUN echo "from django.contrib.auth.models import User; User.objects.create_superuser('admin', 'admin@admin.com', 'admin')" | python manage.py shell
 
-
-
-# # Create superuser non-interactively
-# RUN echo "from django.contrib.auth.models import User; User.objects.create_superuser('admin', 'admin@admin.com', 'admin')" | python manage.py shell
-
-## Make port 8000 available to the world outside this container
+# Make port 7000 available to the world outside this container
 EXPOSE 7000
 
 # Run manage.py to start the Django server
