--- a/Invoicing/Dockerfile
+++ b/Invoicing/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a parent image
-FROM python:3.9-slim
+FROM python:3-slim
 
 # Set the working directory in the container
 WORKDIR /app
@@ -7,24 +7,25 @@ WORKDIR /app
 # Copy the current directory contents into the container at /app
 COPY . /app
 
-# Install system dependencies
-RUN apt-get update \
-    && apt-get install -y python3-venv \
-    && apt-get install -y postgresql-client \
-    && apt-get install -y libpq-dev \
-    && rm -rf /var/lib/apt/lists/*
+# Install virtualenv and PostgreSQL client dependencies
+RUN apt-get update && apt-get install -y python3-venv postgresql-client
 
 # Create a virtual environment
 RUN python -m venv /opt/venv
 
 # Activate the virtual environment and install dependencies
 ENV PATH="/opt/venv/bin:$PATH"
-RUN pip install --upgrade pip \
-    && pip install -r requirements.txt \
-    && pip install psycopg2-binary
+RUN pip install --upgrade pip && pip install -r requirements.txt
 
-# Make port 7000 available to the world outside this container
-EXPOSE 9000
 
-# Command to run the Django server
-CMD ["python", "manage.py", "runserver", "0.0.0.0:9000"]
+# Migrate the database
+RUN python manage.py makemigrations && python manage.py migrate
+
+# Create Django superuser
+RUN echo "from django.contrib.auth import get_user_model; User = get_user_model(); User.objects.create_superuser('admin', 'admin@example.com', 'admin')" | python manage.py shell
+
+# Make port 8000 available to the world outside this container
+EXPOSE 7100
+
+# Run manage.py to start the Django server
+CMD ["python", "manage.py", "runserver", "0.0.0.0:7100"]
