--- a/Invoicing/postgresql_psycopg2_database/Dockerfile
+++ b/Invoicing/postgresql_psycopg2_database/Dockerfile
@@ -12,5 +12,14 @@ EXPOSE 5432
 # Copy custom initialization scripts to the container's initialization directory
 COPY init.sql /docker-entrypoint-initdb.d/
 
+# Copy custom configuration files to the container
+COPY conf.d /etc/postgresql/conf.d/
+COPY pg_hba.conf /etc/postgresql/
+COPY environment /etc/postgresql/
+COPY pg_ctl.conf /etc/postgresql/
+COPY pg_ident.conf /etc/postgresql/
+COPY postgresql.conf /etc/postgresql/
+COPY start.conf /etc/postgresql/
+
 # Set the default command to run when starting the container
 CMD ["postgres"]
