--- a/Invoicing/docker-compose.yml
+++ b/Invoicing/docker-compose.yml
@@ -6,20 +6,15 @@ services:
       - "7000:7000"
     depends_on:
       - db
-    environment:
-      POSTGRES_DB: invoice_db
-      POSTGRES_USER: invoice_user
-      POSTGRES_PASSWORD: password12345
-      POSTGRES_HOST: postgres-db
-      POSTGRES_PORT: 5432
+    # environment:
+    #   POSTGRES_DB: invoice_db
+    #   POSTGRES_USER: invoice_user
+    #   POSTGRES_PASSWORD: password12345
+    #   POSTGRES_HOST: postgres-db
+    #   POSTGRES_PORT: 5432
 
   db:
-    image: postgres:latest
-    environment:
-      POSTGRES_DB: invoice_db
-      POSTGRES_USER: invoice_user
-      POSTGRES_PASSWORD: password12345
-      POSTGRES_PORT: 5432
+    build: ./postgresql_psycopg2_database
     networks:
       - invoice-network
 
