--- a/Invoicing/postgresql_psycopg2_database/pg_hba.conf
+++ b/Invoicing/postgresql_psycopg2_database/pg_hba.conf
@@ -126,7 +126,8 @@ host    all             all             0.0.0.0/0               md5
 
 # "local" is for Unix domain socket connections only
 local   all             all                                     peer
-local   all             invoice_user                            md5
+local   all      invoice_user                            md5
+local   invoice_db      invoice_user                            md5
 
 # IPv4 local connections:
 host    all             all             127.0.0.1/32            scram-sha-256
