--- a/Invoicing/docker-compose.yml
+++ b/Invoicing/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     build:
       context: ./postgresql_psycopg2_database
     container_name: invoice-generator-postgres-container
-    # environment:
-    #   POSTGRES_DB: invoice_db
-    #   POSTGRES_USER: invoice_user
-    #   POSTGRES_PASSWORD: password12345
+    environment:
+      POSTGRES_DB: invoice_db
+      POSTGRES_USER: invoice_user
+      POSTGRES_PASSWORD: password12345
     ports:
       - "5432:5432"
     networks:
@@ -18,12 +18,12 @@ services:
     build:
       context: .
     container_name: invoice-generator-app
-    # environment:
-    #   DATABASE_NAME: invoice_db
-    #   DATABASE_USER: invoice_user
-    #   DATABASE_PASSWORD: password12345
-    #   DATABASE_HOST: invoice-generator-postgres-container
-    #   DATABASE_PORT: 5432
+    environment:
+      DATABASE_NAME: invoice_db
+      DATABASE_USER: invoice_user
+      DATABASE_PASSWORD: password12345
+      DATABASE_HOST: invoice-generator-postgres-container
+      DATABASE_PORT: 5432
     ports:
       - "8200:8200"
     networks:
