--- a/Invoicing/docker-compose.yml
+++ b/Invoicing/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     depends_on:
       - db
     entrypoint: /entrypoint.sh 
-    command: []  
+    command: ["python","manage.py","runserver","0.0.0.0:8200"]  
 
 
 networks:
