--- a/Invoicing/docker-compose.yml
+++ b/Invoicing/docker-compose.yml
@@ -19,10 +19,9 @@ services:
     networks:
       - invoice-network
     depends_on:
-      - db
-    entrypoint: ./entrypoint.sh 
-    command: ["python","manage.py","runserver","0.0.0.0:8200"]  
-
+      - db 
+    entrypoint: /entrypoint.sh
+    command: ["python", "manage.py", "runserver", "0.0.0.0:8200"]
 
 networks:
   invoice-network:
