--- a/Invoicing/Dockerfile
+++ b/Invoicing/Dockerfile
@@ -32,8 +32,8 @@ EXPOSE 8200
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod 777 /entrypoint.sh
 
-# # Run the entrypoint script to start the Django server
-# ENTRYPOINT ["/entrypoint.sh"]
+# Run the entrypoint script to start the Django server
+ENTRYPOINT ["/entrypoint.sh"]
 
 # # Run manage.py to start the Django server
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8200"]
