--- a/Invoicing/Dockerfile
+++ b/Invoicing/Dockerfile
@@ -33,7 +33,8 @@ COPY entrypoint.sh /entrypoint.sh
 RUN chmod 777 /entrypoint.sh
 
 # Run the entrypoint script to start the Django server
-ENTRYPOINT ["/entrypoint.sh"]
+# ENTRYPOINT ["/entrypoint_dockerfile.sh"]
+ENTRYPOINT ["/entrypoint_docker-compose.sh"]
 
 # # Run manage.py to start the Django server
-# CMD ["python", "manage.py", "runserver", "0.0.0.0:8200"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8200"]
