--- a/Invoicing/Jenkinsfile
+++ b/Invoicing/Jenkinsfile
@@ -1,52 +1,51 @@
-pipeline {
+pipeline{
+
     agent any
 
     environment {
         // Define environment variables
         SONAR_HOME = tool name: "SonarQubeInvoice"
     }
-
-    options {
-        timeout(time: 10, unit: 'MINUTES') // Increase the timeout for the entire pipeline
+    
+        environment {
+        NVD_API_KEY = credentials('nvd-api-key')
     }
 
-    stages {
-        stage("Start") {
+    stages{
+        stage("start") {
             steps {
-                echo "Start pipeline"
+                echo "start pipeline"
             }
         }
 
-        stage("Checkout Code from Github") {
-            steps {
-                git url: "https://github.com/Psonare56/Invoice-Generator.git", branch: "Devops"
+        stage("Checkout Code from Github"){
+            steps{
+                echo "Code Cloning "
+                git url: "https://github.com/Psonare56/Invoice-Generator.git",branch: "Devops"
             }
         }
-
+        
         stage("SonarQube Quality Analysis") {
             steps {
                 script {
                     // Run SonarQube analysis
                     withSonarQubeEnv('SonarQubeInvoice') {
-                        sh "${SONAR_HOME}/bin/sonar-scanner -Dsonar.projectName=Invoice-Generator -Dsonar.projectKey=Invoice-Generator"
+                        sh "$SONAR_HOME/bin/sonar-scanner -Dsonar.projectName=Invoice-Generator -Dsonar.projectKey=Invoice-Generator"
                     }
                 }
             }
         }
-
-        stage("OWASP Dependency Check") {
-            options {
-                timeout(time: 15, unit: 'MINUTES') // Set a specific timeout for the OWASP stage
-            }
+        
+        stage("OWASP Dependency Check ") {
             steps {
-                dependencyCheck additionalArguments: '--scan ./', odcInstallation: 'OWASPdcInvoice'
+               dependencyCheck additionalArguments: '--scan ./', nvdCredentialsId: 'nvd-api-key', odcInstallation: 'OWASPdcInvoice'
                 dependencyCheckPublisher pattern: '**/dependency-check-report.xml'
             }
         }
 
-        stage("End of code") {
-            steps {
-                echo "End of code"
+        stage("End of code"){
+            steps{
+                echo "end of Code "
             }
         }
     }
