--- a/Invoicing/Jenkinsfile
+++ b/Invoicing/Jenkinsfile
@@ -1,51 +1,46 @@
-pipeline{
-
+pipeline {
     agent any
 
     environment {
         // Define environment variables
         SONAR_HOME = tool name: "SonarQubeInvoice"
-    }
-    
-        environment {
         NVD_API_KEY = credentials('nvd-api-key')
     }
 
-    stages{
-        stage("start") {
+    stages {
+        stage("Start") {
             steps {
-                echo "start pipeline"
+                echo "Start pipeline"
             }
         }
 
-        stage("Checkout Code from Github"){
-            steps{
-                echo "Code Cloning "
-                git url: "https://github.com/Psonare56/Invoice-Generator.git",branch: "Devops"
+        stage("Checkout Code from Github") {
+            steps {
+                git url: "https://github.com/Psonare56/Invoice-Generator.git", branch: "Devops"
             }
         }
-        
+
         stage("SonarQube Quality Analysis") {
             steps {
                 script {
                     // Run SonarQube analysis
                     withSonarQubeEnv('SonarQubeInvoice') {
-                        sh "$SONAR_HOME/bin/sonar-scanner -Dsonar.projectName=Invoice-Generator -Dsonar.projectKey=Invoice-Generator"
+                        sh "${SONAR_HOME}/bin/sonar-scanner -Dsonar.projectName=Invoice-Generator -Dsonar.projectKey=Invoice-Generator"
                     }
                 }
             }
         }
-        
-        stage("OWASP Dependency Check ") {
+
+        stage("OWASP Dependency Check") {
             steps {
-               dependencyCheck additionalArguments: '--scan ./', nvdCredentialsId: 'nvd-api-key', odcInstallation: 'OWASPdcInvoice'
+                dependencyCheck additionalArguments: '--scan ./', nvdCredentialsId: 'nvd-api-key', odcInstallation: 'OWASPdcInvoice'
                 dependencyCheckPublisher pattern: '**/dependency-check-report.xml'
             }
         }
 
-        stage("End of code"){
-            steps{
-                echo "end of Code "
+        stage("End of code") {
+            steps {
+                echo "End of code"
             }
         }
     }
