--- a/Invoicing/DevSecOps/kubernetes/database/postgresql-pod.yml
+++ b/Invoicing/DevSecOps/kubernetes/database/postgresql-pod.yml
@@ -9,11 +9,20 @@ spec:
       image: postgres:13  # Use the official PostgreSQL image
       env:
         - name: POSTGRES_DB
-          value: invoice_db
+          valueFrom:
+            secretKeyRef:
+              name: postgresql-secret
+              key: POSTGRES_DB
         - name: POSTGRES_USER
-          value: invoice_user
+          valueFrom:
+            secretKeyRef:
+              name: postgresql-secret
+              key: POSTGRES_USER
         - name: POSTGRES_PASSWORD
-          value: password12345
+          valueFrom:
+            secretKeyRef:
+              name: postgresql-secret
+              key: POSTGRES_PASSWORD
       ports:
         - containerPort: 5432
       volumeMounts:
@@ -26,4 +35,4 @@ spec:
       emptyDir: {}
     - name: postgresql-config
       configMap:
-        name: postgresql-config-map # Assuming you have a ConfigMap with PostgreSQL configuration files
+        name: postgresql-config-map  # Assuming you have a ConfigMap with PostgreSQL configuration files
